--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 version: '3'
 services:
   nginx:
-    #image: nginx
+    image: docker.pkg.github.com/chtandy/simple-web-nginx/web-nginx-red:v0.1
     build:
       context: ./
       dockerfile: Dockerfile
